@@ -410,8 +410,8 @@ static void UpdateSignature(SignatureInfo *signature_info,
 %                                                                             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%  Method SignatureImage computes a message digest from an image pixel stream
-%  with an implementation of the NIST SHA-256 Message Digest algorithm.  This
+%  SignatureImage() computes a message digest from an image pixel stream with
+%  an implementation of the NIST SHA-256 Message Digest algorithm.  This
 %  signature uniquely identifies the image and is convenient for determining
 %  if an image has been modified or whether two images are identical.
 %
