@@ -1,3 +1,7 @@
+2002-01-30  Cristy  <cristy@mystic.es.dupont.com>,
+  * Correctly draw arc when arc end/start are not integer
+    (patch contributed by Giuliano Pochini).
+
 2002-01-28  Cristy  <cristy@mystic.es.dupont.com>,
             Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
   * Geometry strings respect -gravity (e.g. -gravity SouthWest -crop
